exports[`Layout should render Layout OneColumn 1`] = `
<div
  className="tc-layout">
  <div
    className="tc-layout-header">
    <nav
      className="tc-app-header-bar navbar navbar-inverse navbar-fixed-top">
      <div
        className="container-fluid">
        <div
          className="navbar-header">
          <span
            className="navbar-brand">
            My app
          </span>
          <button
            className="navbar-toggle collapsed"
            onClick={[Function]}
            type="button">
            <span
              className="sr-only">
              Toggle navigation
            </span>
            <span
              className="icon-bar" />
            <span
              className="icon-bar" />
            <span
              className="icon-bar" />
          </button>
        </div>
        <div
          aria-expanded={null}
          className="navbar-collapse collapse" />
      </div>
    </nav>
  </div>
  <div
    className="tc-layout-one-column" />
</div>
`;

exports[`Layout should render Layout TwoColumns 1`] = `
<div
  className="tc-layout">
  <div
    className="tc-layout-header">
    <nav
      className="tc-app-header-bar navbar navbar-inverse navbar-fixed-top">
      <div
        className="container-fluid">
        <div
          className="navbar-header">
          <span
            className="navbar-brand">
            My app
          </span>
          <button
            className="navbar-toggle collapsed"
            onClick={[Function]}
            type="button">
            <span
              className="sr-only">
              Toggle navigation
            </span>
            <span
              className="icon-bar" />
            <span
              className="icon-bar" />
            <span
              className="icon-bar" />
          </button>
        </div>
        <div
          aria-expanded={null}
          className="navbar-collapse collapse" />
      </div>
    </nav>
  </div>
  <div
    className="tc-layout-two-columns">
    <div
      className="tc-layout-two-columns-left">
      <h1>
        Column one
      </h1>
    </div>
    <div
      className="tc-layout-two-columns-main" />
  </div>
</div>
`;

exports[`Layout should render layout with Drawer component 1`] = `
<div
  className="tc-layout">
  <div
    className="tc-layout-header">
    <nav
      className="tc-app-header-bar navbar navbar-inverse navbar-fixed-top">
      <div
        className="container-fluid">
        <div
          className="navbar-header">
          <span
            className="navbar-brand">
            My app
          </span>
          <button
            className="navbar-toggle collapsed"
            onClick={[Function]}
            type="button">
            <span
              className="sr-only">
              Toggle navigation
            </span>
            <span
              className="icon-bar" />
            <span
              className="icon-bar" />
            <span
              className="icon-bar" />
          </button>
        </div>
        <div
          aria-expanded={null}
          className="navbar-collapse collapse" />
      </div>
    </nav>
  </div>
  <div
    className="tc-layout-two-columns">
    <div
      className="tc-layout-two-columns-left">
      <h1>
        Column one
      </h1>
    </div>
    <div
      className="tc-layout-two-columns-main" />
  </div>
  <div
    className="react-addons-css-transition-group">
    <div
      className="tc-drawer"
      style={undefined}>
      <div
        style={
          Object {
            "width": 500,
          }
        }>
        <h1>
          Hello drawers
        </h1>
        <p>
          You should not being able to read this because I\'m first
        </p>
      </div>
    </div>
  </div>
  <div
    className="react-addons-css-transition-group">
    <div
      className="tc-drawer"
      style={undefined}>
      <div
        style={
          Object {
            "width": 400,
          }
        }>
        <h1>
          Hello drawers
        </h1>
        <p>
          The content dictate the width
        </p>
      </div>
    </div>
  </div>
</div>
`;
